refactor: increase readability